# pytorch-math-vision

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: default.yaml  smoke.yaml
scripts/: eval.py  smoke_data.py  smoke_model.py  train.py
src/mathvision/data/: __init__.py  classes.py  emnist.py  split.py  synthetic.py  transforms.py
src/mathvision/eval/: report.py
src/mathvision/models/: __init__.py  resnet.py
src/mathvision/training/: __init__.py  losses.py  train.py
